--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   geolocator: ^13.0.2
   go_router: ^14.2.7
-  google_maps_flutter: ^2.9.0
+  flutter_map: ^6.1.0                                          
+  latlong2: ^0.9.0
   image_picker: ^1.1.2
   path: ^1.9.0
   permission_handler: ^11.3.1
