--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   permission_handler: ^11.3.1
   supabase_flutter: ^2.8.2
   uuid: ^4.5.1
+  dio: ^5.4.0
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
